src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail01.jova
class Test{

}

class Main {

  public int main() {
     result = 20 + 100;
  }

}